--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # 忽略 node_modules 目录
-node_modules/
+node_modules
 
 # 忽略日志文件
 *.log
@@ -31,3 +31,12 @@ docs/build/
 # 忽略系统文件
 .DS_Store
 Thumbs.db
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
